styles/_footer.scss
@import "themes";
@import "mixins";

$size-button: 32px;

.view-footer {
    display: none;
    width: 100%;
    position: absolute;
    bottom: 0;
    height: $footer-height;
    border-top: 1px solid #aaa;
    box-shadow: inset 0 1px 1px #eee;
    background-image: linear-gradient(#d5d5d5, #b3b3b3);
	color: #444;

	@include on-theme(light) {
		box-shadow: 0 -1px 4px rgba(0, 0, 0, .2);
	}

	@include on-theme(light-iOS7) {
		background: {
			color: $light-bars-bg-color;
			image: none;
		}
		border-top: 1px solid #bbb;
	}

	@include on-theme(dark) {
		border: none;
		box-shadow: none;
		color: $dark-text-color-2;
		background: {
			image: none;
			color: $dark-bg-color-3;
		};
	}

    @include break-point-min($bp-wide) {
		@include flex-center(vertical);
		justify-content: space-between;
    }
}

.footer-sub-title,
.footer-post-title {
	margin: 0 auto;
	text-align: center;
	font-size: 14px;
	font-weight: bold;
	width: 70%;
	white-space: nowrap;
	text-overflow: ellipsis;
	overflow: hidden;
}

.footer-refresh {
	@include flex-center(all);
	@include size($size-button);
}

#detail-close {
	@include size($size-button);
	font-size: 26px;
	font-weight: bold;
	line-height: 26px;
	text-align: center;
}

// [1] hacked vertical position

